nav_resultado.txt
  File "<string>", line 12
    print(f'ventas: {int(pyg[\
                            ^
SyntaxError: '[' was never closed
